--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
 .product{
     display: flex;
 }
+.product__photo.photo-container.photo-main.photo-main>img{
+    width: 350px;
+    height: 350px;
+}
 
 .photo-album ul{
     display: flex;
     list-style: none;
+}
+.photo-album>ul>li>img{
+    width: 60px;
+    height: 58px;
 }
 .price{
     color: red;
@@ -16,11 +24,18 @@
     display: flex;
     list-style: none;
 }
+.variant>ul>li>img{
+    width: 60px;
+    height: 58px;
+}
+.description h3{
+    color: grey;
+}
 button{
-    width: 150px;
+    width: 200px;
     height: 50px;
     color: white;
     background-color: red;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
 }
